<resources>
    <string name="app_name">ChaloUdaipur</string>
    <string name="welcome">Welcome</string>
    <string name="get_info">Get info</string>
    <string name="todo">TODO</string>
    <string name="directions">Directions</string>
    <string name="website">Website</string>
    <string name="phone">Phone:</string>
    <string name="hours">Hours:</string>
    <string name="rating">Rating:</string>
    <string name="paid">Paid</string>
    <string name="register">Register</string>
    <string name="get_directions">Get Directions</string>
    <string name="venue_intent_string">Venues</string>
    <string name="dining_intent_string">Dining</string>
    <string name="upre_restaurant">Upre Restaurant</string>
    <string name="hotel_ambrai">Hotel Ambrai</string>
    <string name="lake_end_hotel">Lake End Hotel</string>
    <string name="uday_vilas">Uday Vilas</string>
    <string name="taj_lake_palace">Taj Lake Palace</string>
    <string name="blue_moon_cafe">Blue Moon Cafe</string>
    <string name="jheel_cafe">Jheel Cafe</string>
    <string name="kabab_mistri">Kabab Mistri</string>
    <string name="jag_mandir_palace">Jag Mandir Palace</string>
    <string name="radisson_blu">Radisson BLu</string>
    <string name="lantern_festival">Lantern Festival</string>
    <string name="shilpgram_festival">Shilpgram Festival</string>
    <string name="ahar_heritage_walk">Ahar Heritage Walk</string>
    <string name="purple_run_udaipur">Purple Run Udaipur</string>
    <string name="dhashera_diwali_mela">Dhashera Diwali Mela</string>
    <string name="hariyali_amavasya_mela">Hariyali Amavasya Mela</string>
    <string name="music_festival">Music Festival</string>
    <string name="free">Free</string>
    <string name="r_kay_mall">R Kay Mall</string>
    <string name="celebration_mall">Celebration Mall</string>
    <string name="lake_city_mall">Lake City Mall</string>
    <string name="bapu_bazar">Bapu Bazar</string>
    <string name="bada_bazar">Bada Bazar</string>
    <string name="jagdish_chowk">Jagdish Chowk</string>
    <string name="arvana">Arvana</string>
    <string name="rajasthali">Rajasthali</string>
    <string name="shilpgram">Shilpgram</string>
    <string name="sindhi_bazar">Sindhi Bazar</string>
    <string name="fatehsagar">Fatehsagar</string>
    <string name="badi_lake">Badi Lake</string>
    <string name="ambrai_ghat">Ambrai Ghat</string>
    <string name="sajjangarh">SajjanGarh</string>
    <string name="city_palace">City Palace</string>
    <string name="lake_pichola">Lake Pichola</string>
    <string name="jaisamand">Jaisamand</string>
    <string name="gangaur_ghat">Gangaur Ghat</string>
    <string name="govardhan_sagar">Govardhan Sagar</string>
    <string name="ropeway_udaipur">Ropeway Udaipur</string>
    <string name="event_registration">You are Registered for this event</string>
    <string name="event_liking">You Like this event</string>
    <string name="event_sharing">You Shared this event</string>
    <string name="fatehsagar_description">Fateh Sagar Lake is situated in the city of Udaipur in the Indian state of Rajasthan.
        It is an artificial lake named after Maharana Fateh Singh of Udaipur and Mewar, constructed north-west of Udaipur, to the north of Lake Pichola in the 1680s.
        It is one of the four lakes of the Udaipur city; the other three being: the Lake Pichola (within the Udaipur town), Udai Sagar Lake, 13 kilometres (8.1 mi) to the east of Udaipur, and Dhebar Lake or Jaisamand Lake, 52 km (32 mi) south east of Udaipur.
        Within the confines of the Fatah Sagar Lake, there are three small islands; the largest of these is the Nehru Park (4 km2 (1.5 sq mi) area), which is a popular tourist attraction, the second island (0.06 km2 or 15 acres area) houses a public park with an impressive water-jet fountain, and the third island (1.2 km2 area) is the address for the Udaipur Solar Observatory (USO).
        The Nehru park is accessible by inboard motor boats. The blue waters of the lake and the backdrop of the green mountains has given the soubriquet of ‘the second Kashmir’ to Udaipur .</string>
    <string name="badi_description">Lake Badi, situated in Udaipur city in the Indian state of Rajasthan, is an artificial fresh water lake.
        The lake was built in the village of Badi, about 12 km from the city of Udaipur, by Maharana Raj Singh I (1652-1680) to counteract the devastating effects of a famine.
        He named it Jiyan Sagar after his mother Jana Devi.
        The lake covers an area of 155 km2., and has an embankment 180 m. long and 18 m. wide, which is graced by three artistic chhatris (kiosks or pavilions).
        During the drought of 1973, the lake supplied water to the people of Udaipur.
        Devoid of any commercial activity, the Badi Lake gives a view of a never-ending expanse providing a serene and calm atmosphere to the visitors.
        The lake is amongst the major tourist attractions of the city.
        One can easily reach Badi Lake either by taking regular buses or by hiring taxis from the city.</string>
    <string name="ambrai_ghat_desctiption">Ambrai Ghat or Manjhi Ghat is a main ghat situated near the waterfront of Lake Pichola in Udaipur.
        It is situated opposite to the Gangaur Ghat, near the Jagdish Chowk area.
        Ambrai Ghat is a popular for its lake-side location surrounded by many popular hotels including the Ambrai restaurant. It is also popular for the picturesque view of City Palace, Udaipur, and surrounding lakes.</string>
    <string name="sajjangarh_description">The Monsoon Palace, also known as the Sajjan Garh Palace, is a hilltop palatial residence in the city of Udaipur, Rajasthan in India, overlooking the Fateh Sagar Lake. It is named Sajjangarh after Maharana Sajjan Singh (1874–1884) of the Mewar Dynasty, who built it in 1884. The palace offers a panoramic view of the city\'s lakes, palaces and surrounding countryside.
        It was built chiefly to watch the monsoon clouds; hence, appropriately, it is popularly known as Monsoon Palace.
        It is said that the Maharana built it at the top of the hill to get a view of his ancestral home, Chittaurgarh.
        Previously owned by the Mewar royal family, it is now under the control of the Forest Department of the Government of Rajasthan and has recently been opened to the public.
        The palace provides a beautiful view of the sunset.
        Its builder, Maharana Sajjan Singh, originally planned to make it a five-storey astronomical centre.
        The plan was cancelled with Maharana Sajjan Singh's premature death. It was then turned into a monsoon palace and hunting lodge.
        High in the Aravalli Hills, just outside Udaipur, the Palace is illuminated in the evenings, giving a golden orange glow (see image in the infobox). The palace was used in the 1983 James Bond film Octopussy as the residence of Kamal Khan, an exiled Afghan prince.</string>
    <string name="citypalace_description">City Palace, Udaipur, is a palace complex situated in the city of Udaipur, Rajasthan.
        It was built over a period of nearly 400 years, with contributions from several rulers of the Mewar dynasty.
        Its construction began in 1553, started by Maharana Udai Singh II of the Sisodia Rajput family as he shifted his capital from the erstwhile Chittor to the new found city of Udaipur.
        The palace is located on the east bank of Lake Pichola and has several palaces built within its complex.
        The City Palace in Udaipur was built in a flamboyant style and is considered the largest of its type in the state of Rajasthan.
        It was built atop a hill, in a fusion of the Rajasthani and Mughal architectural styles, providing a panoramic view of the city and its surroundings.
        Overlooking Lake Pichola, several historic monuments like the Lake Palace, Jag Mandir, Jagdish Temple, Monsoon Palace, and Neemach Mata temple, are all in the vicinity of the palace complex.
        Nestled within the Aravali mountain range, these landmarks are associated in popular culture with the filming of the 1983 James Bond movie Octopussy.
    </string>
    <string name="lakepichola_description">Lake Pichola, situated in Udaipur city in the Indian state of Rajasthan, is an artificial fresh water lake, created in the year 1362 AD, named after the nearby Picholi village.
        It is one of the several contiguous lakes, and developed over the last few centuries in and around the famous Udaipur city.
        The lakes around Udaipur were primarily created by building dams to meet the drinking water and irrigation needs of the city and its neighborhood.
        Two islands, Jag Niwas and Jag Mandir are located within Pichola Lake, and have been developed with several palaces to provide views of the lake.
        There are four islands on the lake:
        1. Jag Niwas, where the Lake Palace is built.
        2. Jag Mandir, with the palace of the same name.
        3. Mohan Mandir, from where the king would watch the annual Gangaur festival celebration.
        Arsi Vilas, small island which was an ammunition depot, but also a small palace. This one was built by one of the maharanas of Udaipur to enjoy the sunset on the lake. It is also a sanctuary catering to a variety of birds, including tufted ducks, coots, egrets, terns, cormorants and kingfishers.[4]
        Three of the numerous lakes found in the vicinity of Udaipur which connect with the Pichola lake and the Saroop Sagar Lake connected by an arched bridge built by Maharana Swaroop Singh (1842-1861) which in turn connects to the Fateh Sagar Lake, the crystal watered lake in the midst of tree lined hills and the smaller Arsi vilas.</string>
    <string name="jaisamand_description">Dhebar Lake (also known as Jaisamand Lake) is India\'s second-largest artificial lake, after Govind Ballabh Pant Sagar.
        It is located in the Udaipur District of Rajasthan State in western India.
        It has an area of 87 km2 (34 sq mi) when full, and was created in the 17th century, when Rana Jai Singh of Udaipur built a marble dam across the Gomati River.
        It is about 45.0 km (28.0 mi) from the district headquarters of Udaipur. When first built, it was the largest artificial lake in the world. The surrounding Jaisamand Wildlife Sanctuary around Dhebar Lake can be reached by the state highway to Banswara from Udaipur.
        It is about 27.0 km (16.8 mi) from Parsad (A village on National Highway No. 8). Jaisamand Wildlife Sanctuary protects about 162.0 square kilometres (16,200 ha), mostly teak forest, on the shores of Dhebar Lake. The lake has three islands measuring from 10 to 40 acres (40,000 to 162,000 m2) each. The Dhebar Lake Marble Dam is 300.0 m (984.3 ft) long and is a part of the \"Heritage Monuments of India\". The dam also has the Hawa Mahal Palace, winter Capital of the erstwhile Maharanas of Mewar.</string>
</resources>