<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.chaloudaipur.VenueIntent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/back_image_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_250"
            android:alpha="0.5"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            tools:src="@drawable/udaipur_main" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="@dimen/dimen_200"
            android:layout_height="@dimen/dimen_130"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_175"
            tools:src="@drawable/udaipur_main" />

        <Button
            android:id="@+id/location_button"
            android:layout_width="@dimen/dimen_25"
            android:layout_height="@dimen/dimen_25"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/circleImageView"
            android:layout_marginLeft="@dimen/dimen_22"
            android:layout_marginStart="@dimen/dimen_22"
            android:layout_marginTop="@dimen/dimen_25"
            android:background="@drawable/ic_location_on_black_24dp" />

        <Button
            android:id="@+id/directions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/location_button"
            android:layout_alignBottom="@+id/location_button"
            android:layout_marginLeft="@dimen/dimen_9"
            android:layout_marginStart="@dimen/dimen_9"
            android:layout_toEndOf="@+id/location_button"
            android:layout_toRightOf="@+id/location_button"
            android:text="@string/directions"
            android:textColor="@android:color/black" />

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/directions_button"
            android:layout_marginTop="@dimen/dimen_18"
            app:cardCornerRadius="@dimen/dimen_8">

            <TextView
                android:id="@+id/scroll_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_5"
                android:text="@string/fatehsagar_description"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textSize_18" />
        </android.support.v7.widget.CardView>

    </RelativeLayout>
</ScrollView>